update dates and subtitles

--- a/problem_sets/_metadata.yml
+++ b/problem_sets/_metadata.yml
@@ -1,5 +1,5 @@
 categories: "Problem Set"
-subtitle: "BME253L - Fall 2025"
+subtitle: "BME290L - Spring 2026"
 format:
   html:
     css: styles.css
